# pureprivacy-desktop

./: README.md  UPDATING.md  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml
docker/: .gitignore  Dockerfile  README.md  build.sh  docker-compose.yml  entrypoint.sh  pp-box  pp-box.ps1
scripts/: fetch-sidecars.sh  run-box-instance.sh
scripts/release/: README.md
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: account.rs  backup.rs  commands.rs  config.rs  crypto.rs  fedauth.rs  lib.rs  main.rs  pairing.rs  setup_page.html  setup_server.rs  state.rs  supervisor.rs  tray.rs  words.rs
src/lib/: api.ts  errors.ts  tokens.css
src/lib/components/: BoxesPanel.svelte  MainWindow.svelte  PeoplePanel.svelte  SettingsPanel.svelte  SetupProgress.svelte  StepAccount.svelte  StepBrowserSetup.svelte  StepConnect.svelte  StepDone.svelte  StepRecovery.svelte  StepWelcome.svelte  Sunflower.svelte  Wordmark.svelte
src/routes/: +page.svelte
