[package]
name = "pureprivacy"
version = "0.1.0"
description = "PurePrivacy — your own private box"
authors = ["Tournesol"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pureprivacy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
rand = "0.8"
dirs = "6"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
# Loopback-only HTTP to the homeserver (admin account creation, future people
# mgmt). rustls so we never link the system OpenSSL; the only target is
# http://127.0.0.1, but the builder needs a TLS backend present.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
