[package]
name = "pureprivacy"
version = "0.1.0"
description = "PurePrivacy — your own private box"
authors = ["Tournesol"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pureprivacy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
rand = "0.8"
dirs = "6"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
# Loopback-only HTTP to the homeserver (admin account creation, future people
# mgmt). rustls so we never link the system OpenSSL; the only target is
# http://127.0.0.1, but the builder needs a TLS backend present.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "socks"] }
# Federation pairing: base64 pair codes + a self-signed cert (CN = the onion)
# for the Caddy fed-proxy's TLS termination.
base64 = "0.22"
rcgen = "0.13"
# Mint a long-lived TURN REST credential (HMAC-SHA1 of the shared coturn secret)
# so the LiveKit SFU can force-relay group-call media through coturn-at-onion —
# the proven media-over-Tor path (see docs/redesign/2026-06-media-over-tor.md).
hmac = "0.12"
sha1 = "0.10"
# At-rest encryption of secrets.json (review finding H2). AES-256-GCM the secrets
# envelope with a 32-byte master key held OUTSIDE the data dir — the OS keychain
# (keyring), or a PUREPRIVACY_SECRETS_KEY env override for headless/CI boxes — so a
# snapshotted/stolen data dir no longer yields the cleartext admin password, TURN
# secret, registration token or LiveKit keys. crypto-rust keeps it pure-Rust (no
# system OpenSSL/libdbus); the apple/windows-native features are inert on Linux.
aes-gcm = "0.10"
sha2 = "0.10"
zeroize = "1"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service", "crypto-rust"] }
